2004-06-12  Bud Davis  <bdavis9659@comcast.net>

	PR gfortran/12839
	* gfortran.fortran-torture/execute/nan_inf_fmt.f90: New test.

2004-06-11  Mark Mitchell  <mark@codesourcery.com>

	PR c++/15862
	* g++.dg/parse/enum1.C: New test.

2004-06-10  Jeff Law  <law@redhat.com>

	* gcc.c-torture/compile/20040610-1.c: New test.

2004-06-11  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	* g++.old-deja/g++.robertl/eb4.C: Adjust error markers.
	* g++.old-deja/g++.other/decl3.C: Likewise.

2004-06-10  Brian Booth  <bbooth@redhat.com>

	* gcc.dg/tree-ssa/20031015-1.c: Scan for
	V_MAY_DEF instead of VDEF.
	* gcc.dg/tree-ssa/20040517-1.c: Ditto.

2004-06-10  Mark Mitchell  <mark@codesourcery.com>

	PR c++/14211
	* g++.dg/conversion/const1.C: New test.

	PR c++/15076
	* g++.dg/conversion/reinterpret1.C: New test.

	PR c++/15877
	* g++.dg/template/enum2.C: New test.

	PR c++/15227
	* g++.dg/template/error13.C: New test.

2004-06-10  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	PR fortran/14957
	* gfortran.fortran-torture/execute/intrinsic_scale.f90: Make all
	arguments to test_* REAL and of the right size.

2004-06-10  Jakub Jelinek  <jakub@redhat.com>

	PR target/15569
	PR rtl-optimization/15681
	* gcc.dg/20040609-1.c: New test.

2004-06-10  Jakub Jelinek  <jakub@redhat.com>

	PR c++/14791
	* g++.dg/opt/builtins1.C: New test.

2004-06-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* gcc.dg/i386-bitfield1.c: Add mingw32 and cygwin to targets
	that use default windows32 struct layout.
	* gcc.dg/i386-bitfield2.c: Likewise.

2004-06-09  Danny Smith  <dannysmith@users.sourceforge.net>

	* g++.dg/abi/bitfield3.C: Add -mno-align-double compile option
	for mingw32 and cygwin targets.

2004-06-09  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/pch/macro-4.c: New.
	* gcc.dg/pch/macro-4.hs: New.

2004-06-09  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	PR fortran/13249
	* gfortran.fortran-torture/compile/name_clash.f90: New test.
