@@ -1,14 +1,20 @@
 2004-06-12  Bud Davis  <bdavis9659@comcast.net>
 
+	* intrinsics/args.c: Implement GETARG and IARGC.
+	* Makefile.am: Add it.
+	* Makefile.in: Regenerate.
+
+2004-06-12  Bud Davis  <bdavis9659@comcast.net>
+
 	PR gfortran/12839
-	* io/write.c(write_float): format inf and nan IAW F2003.
+	* io/write.c(write_float): Format inf and nan IAW F2003.
 
 2004-06-09  Bud Davis  <bdavis9659@comcaste.net>
 
 	PR gfortran/14897
 	* io/transfer.c (formatted_transfer): position is unique
          for T and TL edit descriptors.
- 	(data_transfer_init): set record length to size of internal
+	(data_transfer_init): set record length to size of internal
          file.
 
 2004-06-09  Bud Davis  <bdavis9659@comcast.net>
