@@ -1,5 +1,9 @@
 2004-06-12  Bud Davis  <bdavis9659@comcast.net>
 
+	* gfortran.fortran-torture/execute/getarg_1.f90: New test.
+
+2004-06-12  Bud Davis  <bdavis9659@comcast.net>
+
 	PR gfortran/12839
 	* gfortran.fortran-torture/execute/nan_inf_fmt.f90: New test.
 
